# starlette-bridge

./: CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
.github/workflows/: test-suite.yml
docs/: contributing.md  index.md  release-notes.md  sponsorship.md
docs_src/: add_event_handler.py  events.py  lifespan.py  on_event.py  quickstart.py
scripts/: check  clean  format  install  release  sync-version  test
starlette_bridge/: __init__.py  bridge.py  context_managers.py  routing.py
tests/: conftest.py  test_events.py
