[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starlette_bridge"
description = "The Starlette events bridge that you need."
long_description = "The Starlette events bridge that you need."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasilva@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["starlette>=0.26.1"]
keywords = [
    "api",
    "rest",
    "http",
    "asgi",
    "pydantic",
    "starlette",
    "fastapi",
    "esmerald",
    "framework",
    "websocket",
    "openapi",
    "ml",
    "machine learning",
]

[project.urls]
Homepage = "https://github.com/tarsil/starlette-bridge"
Documentation = "https://starlette-bridge.tarsild.io/"
Changelog = "https://starlette-bridge.tarsild.io/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/tarsil/starlette-bridge"

[project.optional-dependencies]
test = [
    "anyio>=3.0.0,<4",
    "anyio[trio]>=3.2.1,<4.0.0",
    "asyncio[trio]>=3.4.3,<4.0.0",
    "black== 23.1.0",
    "flake8>=5.0.4",
    "httpx>=0.22.0",
    "isort>=5.0.6,<6.0.0",
    "mypy==1.1.1",
    "mock==5.0.1",
    "pytest>=7.1.3,<8.0.0",
    "pytest-cov>=2.12.0,<5.0.0",
    "pytest-asyncio >=0.19.0",
    "ruff>=0.0.256,<1.0.0",
    "types-orjson==3.6.2",
]

doc = [
    "mkautodoc>=0.2.0,<0.3.0",
    "mkdocs>=1.4.2,<2.0.0",
    "mkdocs-material==9.1.3",
    "mdx-include>=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin>=0.1.7,<0.3.0",
    "mkdocstrings>=0.19.0,<0.21.0",
    "pyyaml>=5.3.1,<7.0.0",
]

[tool.hatch.version]
path = "starlette_bridge/__init__.py"

[tool.isort]
profile = "black"
known_third_party = ["esmerald", "pydantic", "starlette"]
src_paths = ["starlette_bridge"]

[tool.mypy]
strict = true
disallow_any_generics = false
disallow_untyped_decorators = true
implicit_reexport = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[[tool.mypy.overrides]]
module = "starlette_bridge.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"


[tool.hatch.build.targets.sdist]
include = ["/starlette_bridge"]
